2006-06-13 [wwp]	2.3.0cvs7

	* src/folder.c
	* src/prefs_folder_item.c
		allow changing folder type even when folder is not a top-level one,
		thanks to Colin.

2006-06-12 [colin]	2.3.0cvs6

	* src/folderview.c
		Fix double-ask of "Do you want to mark all
		as read"

2006-06-12 [colin]	2.3.0cvs5

	* src/compose.c
	* src/compose.h
	* src/folder.c
	* src/folder.h
	* src/imap.c
	* src/inc.c
	* src/main.c
	* src/messageview.c
	* src/mh.c
	* src/prefs_folder_item.c
	* src/procheader.c
	* src/procmime.c
	* src/procmsg.c
	* src/procmsg.h
	* src/send_message.c
	* src/summaryview.c
	* src/toolbar.c
		Apply bug #964's patch (Queue and drafts aren't normal)
		The Drafts and Queue folder now contain RFC-822 files,
		allowing to move and copy mails from and to these 
		folders. Moving from Drafts to Queue will prepare the
		mail for sending (PGP signature, encryption, etc).
		This patch also rework sending errors handling to try
		to be more helpful.
		Also, allow redefining folder types via the GUI 
		(Folder type in its Properties)

2006-06-12 [colin]	2.3.0cvs4

	* src/summaryview.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/gedit-print.c
		Allow to define a specific print font - patch
		by Bernhard Walle <bernhard.walle@gmx.de>
	* src/prefs_fonts.c
	* manual/advanced.xml
	* manual/fr/advanced.xml
		Add a hidden pref to allow deletion without
		confirmation

2006-06-12 [wwp]	2.3.0cvs3

	* .cvsignore
		more files to ignore.

2006-06-12 [wwp]	2.3.0cvs2

	* src/quote_fmt.c
	* src/quote_fmt_lex.l
	* src/quote_fmt_parse.y
		extend the quote_fmt parser (templates and quotes):
		- allow limited sub-expressions in |p{} and |f{} expressions,
		- add !x{expr} (evaluate and insert 'expr' if 'x' is not set) and \! symbols,
		- implemented/fixed missing implementation of query_references and show_references,
		- completed, fixed contents and format of the symbols help dialog,
		- fix some compilation warnings.

2006-06-12 [wwp]	2.3.0cvs1

	* manual/advanced.xml