@@ -1582,3 +1582,4 @@
 ( cvs diff -u -r 1.382.2.276 -r 1.382.2.277 src/compose.c;  cvs diff -u -r 1.50.2.25 -r 1.50.2.26 src/compose.h;  cvs diff -u -r 1.213.2.97 -r 1.213.2.98 src/folder.c;  cvs diff -u -r 1.87.2.28 -r 1.87.2.29 src/folder.h;  cvs diff -u -r 1.179.2.119 -r 1.179.2.120 src/imap.c;  cvs diff -u -r 1.149.2.51 -r 1.149.2.52 src/inc.c;  cvs diff -u -r 1.115.2.89 -r 1.115.2.90 src/main.c;  cvs diff -u -r 1.94.2.85 -r 1.94.2.86 src/messageview.c;  cvs diff -u -r 1.79.2.34 -r 1.79.2.35 src/mh.c;  cvs diff -u -r 1.52.2.20 -r 1.52.2.21 src/prefs_folder_item.c;  cvs diff -u -r 1.47.2.30 -r 1.47.2.31 src/procheader.c;  cvs diff -u -r 1.49.2.76 -r 1.49.2.77 src/procmime.c;  cvs diff -u -r 1.150.2.67 -r 1.150.2.68 src/procmsg.c;  cvs diff -u -r 1.60.2.28 -r 1.60.2.29 src/procmsg.h;  cvs diff -u -r 1.17.2.30 -r 1.17.2.31 src/send_message.c;  cvs diff -u -r 1.395.2.219 -r 1.395.2.220 src/summaryview.c;  cvs diff -u -r 1.43.2.46 -r 1.43.2.47 src/toolbar.c;  ) > 2.3.0cvs5.patchset
 ( cvs diff -u -r 1.207.2.102 -r 1.207.2.103 src/folderview.c;  ) > 2.3.0cvs6.patchset
 ( cvs diff -u -r 1.213.2.98 -r 1.213.2.99 src/folder.c;  cvs diff -u -r 1.52.2.21 -r 1.52.2.22 src/prefs_folder_item.c;  ) > 2.3.0cvs7.patchset
+( cvs diff -u -r 1.8.2.3 -r 1.8.2.4 src/quote_fmt_lex.l;  ) > 2.3.0cvs8.patchset
