@@ -89,13 +89,13 @@ int quote_fmt_firsttime = 1;
 "|p" /* insert program output */ return INSERT_PROGRAMOUTPUT;
 "!d" /* query date */ return QUERY_NOT_DATE;
 "!f" /* query from */ return QUERY_NOT_FROM;
-"!N"|"!F"|"!L"|"!I" /* query from name */ return QUERY_NOT_FULLNAME;
-"!s" /* query subject */ return QUERY_NOT_SUBJECT;
-"!t" /* query to */ return QUERY_NOT_TO;
-"!c" /* query cc */ return QUERY_NOT_CC;
-"!n" /* query newsgroups */ return QUERY_NOT_NEWSGROUPS;
-"!i" /* query message-id */ return QUERY_MESSAGEID;
-"!r" /* query references */ return QUERY_REFERENCES;
+"!N"|"!F"|"!L"|"!I" /* query not(from name) */ return QUERY_NOT_FULLNAME;
+"!s" /* query not(subject) */ return QUERY_NOT_SUBJECT;
+"!t" /* query not(to) */ return QUERY_NOT_TO;
+"!c" /* query not(cc) */ return QUERY_NOT_CC;
+"!n" /* query not(newsgroups) */ return QUERY_NOT_NEWSGROUPS;
+"!i" /* query not(message-id) */ return QUERY_NOT_MESSAGEID;
+"!r" /* query not(references) */ return QUERY_NOT_REFERENCES;
 <S_DATE>"{" return OPARENT;
 <S_DATE>"}" { BEGIN S_NORMAL; return CPARENT; }
 <S_NORMAL>"{" return OPARENT;
