@@ -1,3 +1,8 @@
+2006-06-13 [wwp]	2.3.0cvs8
+
+	* src/quote_fmt_lex.l
+		fix wrong tokens returned in quote_fmt lexer, query not().
+
 2006-06-13 [wwp]	2.3.0cvs7
 
 	* src/folder.c
